force-app/main/default/objects/BLN_ExceptionLogger__c/BLN_ExceptionLogger__c.object-meta.xml
<CustomObject>
    <description>This is used to store exception logs.</description>
    <label>Exception Logger</label>
    <nameField>
        <displayFormat>EL-{00000000}</displayFormat>
        <label>Exception Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>