force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_CurrentUser__c.field-meta.xml
<CustomField>
    <fullName>BLN_CurrentUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-2048--&gt; Need to create this field to populate this field of record with field values carried from Flow Exception Logger platform event:</description>
    <label>Current User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExceptionLogger</relationshipName>
    <type>Lookup</type>
</CustomField>