force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_DiffBtwnCreatedDateToday__c.field-meta.xml
<CustomField>
    <fullName>BLN_DiffBtwnCreatedDateToday__c</fullName>
    <description>FOUK:12195, This field is created to store the difference between today&apos;s date and Created Date</description>
    <formula>TODAY() - DATEVALUE( CreatedDate )</formula>
    <label>Diff Btwn Created Date &amp; Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>