force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_EntityName__c.field-meta.xml
<CustomField>
    <fullName>BLN_EntityName__c</fullName>
    <description>FOUK-2048--&gt; Need to create this field to populate this field of record with field values carried from Flow Exception Logger platform event:</description>
    <label>Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>