force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>BLN_ErrorMessage__c</fullName>
    <description>FOUK-252 -&gt; Store The Exception Error Message</description>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>