force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>BLN_ExceptionType__c</fullName>
    <description>FOUK-252 -&gt; Store The Exception Type</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>