force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_IsDeletable__c.field-meta.xml
<CustomField>
    <fullName>BLN_IsDeletable__c</fullName>
    <formula>AND(
  TODAY()- DATEVALUE(CreatedDate) &gt;= $Setup.BLN_LoggingSettings__c.BLN_ExceptionLoggerRetentionPeriod__c,
  NOT(BLN_RetainLog__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deletable</label>
    <type>Checkbox</type>
</CustomField>