force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_LineNumber__c.field-meta.xml
<CustomField>
    <fullName>BLN_LineNumber__c</fullName>
    <description>FOUK-252 -&gt; Store The ExceptionLine Number</description>
    <label>Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>