force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_LogType__c.field-meta.xml
<CustomField>
    <fullName>BLN_LogType__c</fullName>
    <description>FOUK--2048--&gt; Store the log type.</description>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>