force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_MethodStep__c.field-meta.xml
<CustomField>
    <fullName>BLN_MethodStep__c</fullName>
    <description>FOUK-252 -&gt; Store The Mehtod</description>
    <label>Method/Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>