force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_RecordIdIdentifier__c.field-meta.xml
<CustomField>
    <fullName>BLN_RecordIdIdentifier__c</fullName>
    <description>FOUK--2048--&gt; Store the Record ID</description>
    <label>RecordId/Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>