force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_RetainLog__c.field-meta.xml
<CustomField>
    <fullName>BLN_RetainLog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retain Log</label>
    <type>Checkbox</type>
</CustomField>