force-app/main/default/objects/BLN_ExceptionLogger__c/fields/BLN_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>BLN_StackTrace__c</fullName>
    <description>FOUK-252 -&gt; Store The Stack Trace of Exception</description>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>